--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "3rdparty/rang"]
 	path = 3rdparty/rang
 	url = https://github.com/agauniyal/rang
+[submodule "3rdparty/tvm-vta-zc706"]
+	path = 3rdparty/vta-hw
+	url = https://github.com/AWoLnik/tvm-vta-zc706.git
